default/objects/Bank_Account_Transaction__c/Bank_Account_Transaction__c.object-meta.xml
<CustomObject>
    <label>Bank Account Transaction</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Bank Account Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Account Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>