default/objects/Bank_Account_Transaction__c/fields/Bank_Account_Internal_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account_Internal_Number__c</fullName>
    <label>Bank Account Internal Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>