default/objects/Bank_Account_Transaction__c/fields/Booked_On__c.field-meta.xml
<CustomField>
    <fullName>Booked_On__c</fullName>
    <label>Booked On</label>
    <length>20</length>
    <type>Text</type>
</CustomField>