default/objects/Bank_Account_Transaction__c/fields/Currency_Amount__c.field-meta.xml
<CustomField>
    <fullName>Currency_Amount__c</fullName>
    <label>Currency Amount</label>
    <length>50</length>
    <type>Text</type>
</CustomField>