default/objects/Bank_Account_Transaction__c/fields/Currency_Balance__c.field-meta.xml
<CustomField>
    <fullName>Currency_Balance__c</fullName>
    <label>Currency Balance</label>
    <length>50</length>
    <type>Text</type>
</CustomField>