default/objects/Bank_Account_Transaction__c/fields/Kind__c.field-meta.xml
<CustomField>
    <fullName>Kind__c</fullName>
    <label>Kind</label>
    <length>255</length>
    <type>Text</type>
</CustomField>