default/objects/Bank_Account_Transaction__c/fields/Party__c.field-meta.xml
<CustomField>
    <fullName>Party__c</fullName>
    <label>Party</label>
    <length>255</length>
    <type>Text</type>
</CustomField>