default/objects/Bank_Account_Transaction__c/fields/Party_Iban__c.field-meta.xml
<CustomField>
    <fullName>Party_Iban__c</fullName>
    <label>Party Iban</label>
    <length>50</length>
    <type>Text</type>
</CustomField>