default/objects/Bank_Account_Transaction__c/fields/Transaction_On__c.field-meta.xml
<CustomField>
    <fullName>Transaction_On__c</fullName>
    <label>Transaction On</label>
    <length>20</length>
    <type>Text</type>
</CustomField>