default/objects/Bank_Account_Transaction__c/fields/Variable_Symbol__c.field-meta.xml
<CustomField>
    <fullName>Variable_Symbol__c</fullName>
    <label>Variable Symbol</label>
    <length>50</length>
    <type>Text</type>
</CustomField>